--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
         <p class="story-text">Look carefully at this crime scene.</p>
         <div class="options">
-            <button class="choice-btn" onclick="checkAnswer(this, false, 'Clue: Look at the wheelchair!the person cannot walk at all')">Suicide</button>
+            <button class="choice-btn" onclick="checkAnswer(this, false, 'Look at the wheelchair!the person cannot walk at all')">Suicide</button>
             <button class="choice-btn" onclick="checkAnswer(this, true)">Murder</button>
         </div>
     </div>
@@ -52,7 +52,7 @@
         </div>
         <p class="story-text">Is it suicide or a crime?</p>
         <div class="options">
-            <button class="choice-btn" onclick="checkAnswer(this, false, 'Clue: Why would a suicide victim start cooking?')">Suicide</button>
+            <button class="choice-btn" onclick="checkAnswer(this, false, 'Why would a suicide victim start cooking?')">Suicide</button>
             <button class="choice-btn" onclick="checkAnswer(this, true)">It's a Crime</button>
         </div>
     </div>
@@ -64,9 +64,9 @@
         </div>
         <p class="story-text">Who is the fake doctor?</p>
         <div class="options">
-            <button class="choice-btn" onclick="checkAnswer(this, false, ' Clue: Man in the middle has a womans ID.Look closely at the ID cards.')">Left Doctor</button>
+            <button class="choice-btn" onclick="checkAnswer(this, false, ' Look closely at the ID cards.')">Left Doctor</button>
             <button class="choice-btn" onclick="checkAnswer(this, true)">Middle Doctor</button>
-            <button class="choice-btn" onclick="checkAnswer(this, false, 'No, check the middle one again.')">Right Doctor</button>
+            <button class="choice-btn" onclick="checkAnswer(this, false, 'Look closely at the ID cards.')">Right Doctor</button>
         </div>
     </div>
 
@@ -77,8 +77,8 @@
         </div>
         <p class="story-text">Who painted it?</p>
         <div class="options">
-            <button class="choice-btn" onclick="checkAnswer(this, false, 'Clue:he is too short.')">First Man</button>
-            <button class="choice-btn" onclick="checkAnswer(this, false, 'Clue:The man is not holding a chalkt .')">Second Man</button>
+            <button class="choice-btn" onclick="checkAnswer(this, false, 'he is too short.')">First Man</button>
+            <button class="choice-btn" onclick="checkAnswer(this, false, 'The man is not holding a chalkt .')">Second Man</button>
             <button class="choice-btn" onclick="checkAnswer(this, true)">Third Man</button>
         </div>
     </div>
@@ -144,4 +144,5 @@
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
     <script src="script.js"></script>
 </body>
+
 </html>
